# aws-for-fluent-bit

./: .gitignore  AWS_FLB_CHERRY_PICKS  AWS_FOR_FLUENT_BIT_PREVIOUS_STABLE_VERSION  AWS_FOR_FLUENT_BIT_STABLE_VERSION  AWS_FOR_FLUENT_BIT_VERSION  AWS_FOR_FLUENT_BIT_WINDOWS_STABLE_VERSION  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile.build-init  Dockerfile.cherrypick-test  Dockerfile.core  Dockerfile.debug  Dockerfile.debug-base  Dockerfile.debug-init  Dockerfile.fbwithinit  Dockerfile.init  Dockerfile.init-debug-base  Dockerfile.init-debug-fs  Dockerfile.init-debug-s3  Dockerfile.init-release  Dockerfile.initprocess  Dockerfile.plugins  Dockerfile.plugins-windows  Dockerfile.valgrind  Dockerfile.vanilla-debug-base  Dockerfile.vanilla-debug-fs  Dockerfile.vanilla-debug-s3  Dockerfile.vanilla-debug-valgrind  Dockerfile.vanilla-release  Dockerfile.windows  Makefile  README.md  Release_Process.md  THIRD-PARTY  bokun-readme.txt  buildspec.yml  buildspec_integ.yml  buildspec_load_test.yml  buildspec_load_test_create_infra_ecs.yml  (+21 more)
.github/: CODEOWNERS  (+1 more)
load_tests/: .gitignore  README.md  bar.py  load_test.py  pyproject.toml  requirements.txt  setup_test_environment.sh  validation_bar.py
load_tests/create_testing_resources/: app.py
load_tests/create_testing_resources/ecs/: app.py
load_tests/create_testing_resources/eks/: app.py  cluster.yaml  namespace.yaml
load_tests/daemonset/: cloudwatch.yaml
load_tests/logger/: Dockerfile  log_generator.c
load_tests/task_definitions/: cloudwatch.json  firehose.json  kinesis.json  s3.json
load_tests/validation/: validate.go
(+308 files in other folders)
