[tool.poetry]
name = "load_tests"
version = "0.1.0"
description = ""
authors = ["Firelens Team <firelens@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"aws-cdk.core" = "<=1.167.0"
"aws-cdk.aws_kinesis" = "<=1.167.0"
"aws-cdk.aws_s3" = "<=1.167.0"
"aws-cdk.aws_kinesisfirehose" = "<=1.167.0"
"aws-cdk.aws_iam" = "<=1.167.0"
"aws-cdk.aws_logs" = "<=1.167.0"
"aws-cdk.aws_autoscaling" = "<=1.167.0"
"aws-cdk.aws_ec2" = "<=1.167.0"
"aws-cdk.aws_ecs" = "<=1.167.0"
boto3 = "^1.24.58"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
